changes by bobby

--- a/src/app/venueadmin/parentadminview/adminnavbar/adminnavbar.component.html
+++ b/src/app/venueadmin/parentadminview/adminnavbar/adminnavbar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bottomline">
   <div class="row">
     <div class="col-10">
       <div class="float-left">
