--- a/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class='col-4 float-right'>
-      <a data-toggle="modal" data-target="#venueSignup" id="addvenue"><h5>Request To Add Venue</h5></a>
+      <button class="btn btn-outline-primary" data-toggle="modal" data-target="#venueSignup" id="addvenue">+ Add Venue</button>
     </div>
   </div>
   <div class="row text-center">
