--- a/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venuecreateedit/venuecreateedit.component.html
@@ -279,35 +279,36 @@
       </div>
     </div> <!--users-->
     <br>
-    <div class="row" id="tablerow"> <!--tablerow-->
-      <table width="100%">
-        <tr>
+    <div class="row"> <!--tablerow-->
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>
+              <button style="font-weight: normal" (click)="commitdeleteuser()" *ngIf="deleteuserpklist.length > 0">Delete {{deleteuserpklist.length}} from Venue<span *ngIf="deleteuserpklist.length > 1">s</span></button>
+              <p *ngIf="deleteuserpklist.length < 1">Delete <br>from Venue</p>
+            </th>
+            <th>
 
-          <th>
-            <button style="font-weight: normal" (click)="commitdeleteuser()" *ngIf="deleteuserpklist.length > 0">Delete {{deleteuserpklist.length}} from Venue<span *ngIf="deleteuserpklist.length > 1">s</span></button>
-            <p *ngIf="deleteuserpklist.length < 1">Delete <br>from Venue</p>
-          </th>
-          <th>
-
-          </th>
-          <th>
-            Receive<br>
-            RFP Emails
-          </th>
-          <th>
-            Name
-          </th>
-          <th>
-            Account Role
-          </th>
-          <th>
-            Email
-          </th>
-          <th>
-            Phone
-          </th>
-        </tr>
-
+            </th>
+            <th>
+              Receive<br>
+              RFP Emails
+            </th>
+            <th>
+              Name
+            </th>
+            <th>
+              Account Role
+            </th>
+            <th>
+              Email
+            </th>
+            <th>
+              Phone
+            </th>
+          </tr>
+        </thead>
+        <tbody>
         <tr *ngFor="let user of venueusers; let i =index">
           <td>
             <input (change)="deleteUser(user.id)" type="checkbox"
@@ -340,6 +341,7 @@
             {{user.phone}}
           </td>
         </tr>
+        </tbody>
       </table>
     </div> <!--tablerow-->
 
